RESOLVED FIXED100497
Memory instrumentation: report memory occupied by ResourceRequest instead of its base ResourceRequestBase
https://bugs.webkit.org/show_bug.cgi?id=100497
Summary Memory instrumentation: report memory occupied by ResourceRequest instead of ...
Yury Semikhatsky
Reported 2012-10-26 04:14:50 PDT
Otherwise we report a pointer to the base class which is not an address of an object allocated on the heap.
Attachments
Patch (3.78 KB, patch)
2012-10-26 04:16 PDT, Yury Semikhatsky
no flags
Patch (5.01 KB, patch)
2012-10-26 04:42 PDT, Yury Semikhatsky
no flags
Patch (9.59 KB, patch)
2012-11-01 01:05 PDT, Yury Semikhatsky
no flags
Yury Semikhatsky
Comment 1 2012-10-26 04:16:13 PDT
Ilya Tikhonovsky
Comment 2 2012-10-26 04:18:45 PDT
Comment on attachment 170883 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=170883&action=review > Source/WebCore/ChangeLog:8 > + Added memory reporting method to chromium implementation of ResourceRequest. could you please explain the reason of this change.
Early Warning System Bot
Comment 3 2012-10-26 04:28:53 PDT
Early Warning System Bot
Comment 4 2012-10-26 04:31:12 PDT
Yury Semikhatsky
Comment 5 2012-10-26 04:42:45 PDT
Yury Semikhatsky
Comment 6 2012-10-26 04:43:04 PDT
(In reply to comment #2) > (From update of attachment 170883 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=170883&action=review > > > Source/WebCore/ChangeLog:8 > > + Added memory reporting method to chromium implementation of ResourceRequest. > > could you please explain the reason of this change. Done.
Ilya Tikhonovsky
Comment 7 2012-10-26 04:43:51 PDT
Comment on attachment 170891 [details] Patch lgtm
Alexander Pavlov (apavlov)
Comment 8 2012-10-26 04:53:22 PDT
Comment on attachment 170891 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=170891&action=review A few textual nits to fix before landing. > Source/WebCore/ChangeLog:8 > + Added memory reporting method to chromium implementation of ResourceRequest. chromium -> Chromium? > Source/WebCore/ChangeLog:15 > + and shouldn't be used directly(ResourceRequest should be used instead). add a space before '('
Yury Semikhatsky
Comment 9 2012-10-26 06:18:26 PDT
(In reply to comment #8) > (From update of attachment 170891 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=170891&action=review > > A few textual nits to fix before landing. > > > Source/WebCore/ChangeLog:8 > > + Added memory reporting method to chromium implementation of ResourceRequest. > > chromium -> Chromium? > Done. > > Source/WebCore/ChangeLog:15 > > + and shouldn't be used directly(ResourceRequest should be used instead). > > add a space before '(' Done.
Yury Semikhatsky
Comment 10 2012-10-26 06:20:57 PDT
Vincent Scheib
Comment 11 2012-10-26 10:49:41 PDT
Reverted r132644 for reason: Causes webkit_unit_tests MemoryInstrumentationTest.ImageObserver to fail. Committed r132675: <http://trac.webkit.org/changeset/132675>
Yury Semikhatsky
Comment 12 2012-10-31 02:29:04 PDT
(In reply to comment #11) > Reverted r132644 for reason: > > Causes webkit_unit_tests MemoryInstrumentationTest.ImageObserver to fail. > > Committed r132675: <http://trac.webkit.org/changeset/132675> Is there a link to the failing bot output?
Yury Semikhatsky
Comment 13 2012-11-01 01:05:09 PDT
WebKit Review Bot
Comment 14 2012-11-01 02:28:40 PDT
Comment on attachment 171790 [details] Patch Clearing flags on attachment: 171790 Committed r133141: <http://trac.webkit.org/changeset/133141>
WebKit Review Bot
Comment 15 2012-11-01 02:28:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.