Memory instrumentation: report memory occupied by ResourceRequest instead of its base ResourceRequestBase https://bugs.webkit.org/show_bug.cgi?id=100497

Reviewed by Alexander Pavlov.

Added memory reporting method to Chromium implementation of ResourceRequest.

* platform/network/ResourceRequestBase.cpp:
(WebCore::ResourceRequestBase::reportMemoryUsageBase): Renamed reportMemoryUsage
on ResourceRequestBase to reportMemoryUsageBase and made it protected. I'd
rather make ResourceRequestBase::reportMemoryUsage virtual and override it
in the descendant but ResourceRequestBase doesn't have any virtual methods
and shouldn't be used directly (ResourceRequest should be used instead).
* platform/network/ResourceRequestBase.h:
(ResourceRequestBase):
* platform/network/chromium/ResourceRequest.cpp:
(WebCore::ResourceRequest::reportMemoryUsage):
(WebCore):
* platform/network/chromium/ResourceRequest.h:
(ResourceRequest):

Canonical link: https://commits.webkit.org/118555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132644 268f45cc-cd09-0410-ab3c-d52691b4dbfc